Add ui.mask on project

--- a/public/views/home/homeView.html
+++ b/public/views/home/homeView.html
@@ -1,3 +1,6 @@
+<ol class="breadcrumb">
+    <li class="active">Home</li>
+</ol>
 <div class="jumbotron">
   <h1>Single Page Application</h1>
   <p>
