--- a/public/views/customer/editView.html
+++ b/public/views/customer/editView.html
@@ -1,5 +1,6 @@
 <ol class="breadcrumb">
-    <li class="active">Customers</li>
+    <li><a href="#/customer">Customers</a></li>
+    <li class="active">{{title}}</li>
 </ol>
 <div class="page-header">
     <h2>{{title}}</h2>
@@ -9,7 +10,7 @@
         <div class="row">
             <div class="form-group col-md-2">
               <label for="name">ID</label>
-              <input type="text" class="form-control" id="name" ng-model="customer.id" required />
+              <input type="text" class="form-control" id="name" ng-model="customer.id" ui-mask="9999"  ui-mask-placeholder ng-disabled="isUpdate" required />
             </div>
             <div class="form-group col-md-5">
               <label for="name">Name</label>
