--- a/public/views/customer/listView.html
+++ b/public/views/customer/listView.html
@@ -11,7 +11,7 @@
         <a href="#customer/new" class="btn btn-primary">New customer</a>
     </div>
     <hr/>
-    <table class="table table-striped table-responsive">
+    <table ng-show="customers.length > 0" class="table table-striped table-responsive">
         <thead>
           <tr>
             <td>ID</td>
@@ -32,5 +32,6 @@
             </tr>
         </tbody>
     </table>
+    <div ng-show="customers.length == 0" class="alert alert-warning">No customers registered!</div>
   </div>
 </div>
