Declare angular-mask dependencie

--- a/public/views/home/homeView.html
+++ b/public/views/home/homeView.html
@@ -5,7 +5,7 @@
   <h1>Single Page Application</h1>
   <p>
 This example shows a good way to create a single page application. Using for this purpose bower to frontend dependency management and npm for node packages dependency management.
-It uses laravel-elixir, a task runner over gulp, to minifield and merge scripts and less as css preprocessor.
+It uses laravel-elixir, a task runner over gulp, to minify and merge scripts and less as css preprocessor.
 </p>
     <a class="btn btn-lg btn-primary" href="#customer" role="button"><i class="fa fa-users"></i> See customer page</a>
   </p>
