--- a/public/views/customer/editView.html
+++ b/public/views/customer/editView.html
@@ -33,6 +33,6 @@
     </div>
     <div class="panel-footer">
         <button class="btn btn-primary" ng-click="save()" type="button"><i class="fa fa-save"></i> Save</button>
-        <button class="btn btn-default" type="button"><i class="fa fa-circle-thin"></i> Cancel</button>
+        <a class="btn btn-default" href="#/customer" type="button"><i class="fa fa-circle-thin"></i> Cancel</a>
     </div>
 </form>
