--- a/public/views/customer/listView.html
+++ b/public/views/customer/listView.html
@@ -1,37 +1,38 @@
 <ol class="breadcrumb">
-  <li class="active">Customers</li>
+    <li class="active">Customers</li>
 </ol>
 <div class="page-header">
-  <h2>Customers</h2>
+    <h2>Customers</h2>
 </div>
 <div class="panel panel-default">
-  <div class="panel-heading">List of customers</div>
-  <div class="panel-body">
-    <div>
-        <a href="#customer/new" class="btn btn-primary">New customer</a>
+    <div class="panel-heading">List of customers</div>
+    <div class="panel-body">
+        <div>
+            <a href="#customer/new" class="btn btn-primary">New customer</a>
+        </div>
+        <hr/>
+        <table datatable="ng" ng-show="customers.length > 0" class="table table-striped table-responsive">
+            <thead>
+                <tr>
+                    <td>ID</td>
+                    <td>Name</td>
+                    <td>Category</td>
+                    <td width="200">Actions</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="customer in customers">
+                    <td>{{customer.id}}</td>
+                    <td>{{customer.name}}</td>
+                    <td>{{customer.category}}</td>
+                    <td>
+                        <a class="btn btn-default" href="#customer/edit/{{customer.id}}">Edit</a>
+                        <button class="btn btn-danger" ng-click="remove(customer)">Remove</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div ng-show="customers.length == 0" class="alert alert-warning">No customers registered!</div>
     </div>
-    <hr/>
-    <table ng-show="customers.length > 0" class="table table-striped table-responsive">
-        <thead>
-          <tr>
-            <td>ID</td>
-            <td>Name</td>
-            <td>Category</td>
-            <td width="200">Actions</td>
-          </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="customer in customers">
-              <td>{{customer.id}}</td>
-              <td>{{customer.name}}</td>
-              <td>{{customer.category}}</td>
-              <td>
-                  <a class="btn btn-default" href="#customer/edit/{{customer.id}}">Edit</a>
-                  <button class="btn btn-danger" ng-click="remove(customer)">Remove</button>
-              </td>
-            </tr>
-        </tbody>
-    </table>
-    <div ng-show="customers.length == 0" class="alert alert-warning">No customers registered!</div>
-  </div>
 </div>
